<resources>
    <string name="app_name">Twitter-ish</string>
    <string name="action_settings">Settings</string>
    <string name="textview">TextView</string>
    <string name="login_username_hint">Username</string>
    <string name="login_password_hint">Password</string>
    <string name="login_screen_title">Login to Twitter-ish</string>
    <string name="sign_up_screen_title">Sign Up to Twitter-ish</string>
    <string name="login_button_title">Sign In</string>
    <string name="sign_up_button_title">Sign Up</string>
    <string name="login_password_confirmation_hint">Confirm Password</string>
    <string name="empty" />
    <string name="error_message_user_name_not_found">User Name Not Found</string>
    <string name="error_message_empty_user_name">Empty User Name</string>
    <string name="error_message_empty_password">Empty Password</string>
    <string name="replying_to_name_goes_here">Replying to \'name goes here\'</string>
    <string name="post_your_reply">Post your reply</string>
    <string name="home_feed_fragment_toolbar_title">Feed</string>
    <string name="sign_out_button_title">sign out</string>
    <string name="post_details_fragment_title">Post Details</string>
    <string name="new_post_fragment_title">New Post</string>
    <string name="new_post_text_field_hint">What\'s Up?</string>
    <string name="username_is_taken">Username is taken</string>
    <string name="usern_not_found">User not found</string>
    <string name="user_name_is_empty">Username is empty</string>
    <string name="password_is_empty">Password is empty</string>
    <string name="confirm_password_is_empty">Confirm password is empty</string>
    <string name="password_do_not_match">Password dont match</string>
    <string name="invalid_password">Invalid password</string>
</resources>
