<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/login_wrapper"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/screen_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_screen_title"
                android:textColor="@color/title_text_color"
                android:textSize="@dimen/title_text_size"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/sign_up_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:text="@string/sign_up_button_title"
                android:textColor="@color/action_text_color"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/username_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_username_hint"
                app:layout_constraintTop_toBottomOf="@id/screen_title">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_password_hint"
                app:layout_constraintTop_toBottomOf="@id/username_input_layout">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_button_title"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password_input_layout" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
            android:id="@+id/login_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="invisible" />

</FrameLayout>